[gd_scene load_steps=18 format=3 uid="uid://ynx1yskjmkv"]

[ext_resource type="Script" path="res://scenes/actors/player/player.gd" id="1_hkfg0"]
[ext_resource type="PackedScene" uid="uid://cw242vwu63unm" path="res://scenes/components/velocity_component.tscn" id="2_ard2g"]
[ext_resource type="PackedScene" uid="uid://bstfduk5n3qph" path="res://scenes/components/health_component.tscn" id="3_iwx4l"]
[ext_resource type="Texture2D" uid="uid://ecu7ebddmkeu" path="res://assets/textures/shadows/shadow_medium.png" id="4_fry8f"]
[ext_resource type="Shader" path="res://resources/flash.gdshader" id="4_n8673"]
[ext_resource type="PackedScene" uid="uid://cco48lldgqw2y" path="res://scenes/actors/player/weapons/gun.tscn" id="5_cj8qp"]
[ext_resource type="Texture2D" uid="uid://c8kb6nv0bniok" path="res://assets/textures/actors/sam.png" id="5_mtji8"]
[ext_resource type="Script" path="res://scenes/actors/player/iframes.gd" id="6_sn550"]
[ext_resource type="PackedScene" uid="uid://c44xhc34vg58v" path="res://scenes/overlap/hurtbox.tscn" id="7_uabu0"]
[ext_resource type="PackedScene" uid="uid://db1mcjdb50qip" path="res://scenes/ui/hud.tscn" id="10_r142w"]
[ext_resource type="Theme" uid="uid://bmfa5joyltbk6" path="res://scenes/ui/themes/default_theme.tres" id="11_5u8el"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e3xyy"]
radius = 5.0
height = 14.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rnuo4"]
shader = ExtResource("4_n8673")
shader_parameter/active = false

[sub_resource type="Animation" id="Animation_0u3hp"]
resource_name = "Blink"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body/Sprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_eh32o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body/Sprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_twld5"]
_data = {
"Blink": SubResource("Animation_0u3hp"),
"RESET": SubResource("Animation_eh32o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1io08"]
size = Vector2(14.125, 35.625)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 16
script = ExtResource("1_hkfg0")

[node name="VelocityComponent" parent="." instance=ExtResource("2_ard2g")]
unique_name_in_owner = true
max_speed = 230

[node name="HealthComponent" parent="." instance=ExtResource("3_iwx4l")]
unique_name_in_owner = true
max_hp = 3

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_e3xyy")

[node name="Body" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -17)

[node name="ShadowMedium" type="Sprite2D" parent="Body"]
position = Vector2(0, 17)
texture = ExtResource("4_fry8f")

[node name="Sprite" type="Sprite2D" parent="Body"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_rnuo4")
texture = ExtResource("5_mtji8")

[node name="TurnCenter" type="Node2D" parent="Body"]

[node name="Gun" parent="Body/TurnCenter" instance=ExtResource("5_cj8qp")]
unique_name_in_owner = true
position = Vector2(7, 0)

[node name="IFrames" type="Node" parent="."]
script = ExtResource("6_sn550")

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="IFrames"]
libraries = {
"": SubResource("AnimationLibrary_twld5")
}

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health_component", "velocity_component") instance=ExtResource("7_uabu0")]
unique_name_in_owner = true
position = Vector2(0, -17)
collision_mask = 32
iframes_enabled = true
health_component = NodePath("../HealthComponent")
velocity_component = NodePath("../VelocityComponent")

[node name="Timer" parent="Hurtbox" index="0"]
wait_time = 0.5

[node name="CollisionShape" type="CollisionShape2D" parent="Hurtbox"]
unique_name_in_owner = true
position = Vector2(0, -0.1875)
shape = SubResource("RectangleShape2D_1io08")

[node name="RTCamera" type="RemoteTransform2D" parent="."]

[node name="HUD" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("10_r142w")]
health_component = NodePath("../HealthComponent")

[node name="NameTag" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -51.0
offset_right = 44.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("11_5u8el")
theme_override_font_sizes/font_size = 8
text = "Player Name"
horizontal_alignment = 1

[connection signal="no_hp" from="HealthComponent" to="." method="die"]
[connection signal="hit" from="Hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="iframes_ended" from="Hurtbox" to="IFrames" method="_on_hurtbox_iframes_ended"]
[connection signal="iframes_started" from="Hurtbox" to="IFrames" method="_on_hurtbox_iframes_started"]

[editable path="Hurtbox"]
